# workflow

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
config/i18n/: en.json  en.yaml  es.json  es.yaml
docs/superpowers/specs/: 2026-03-26-multi-select-design.md
resource/: akka_cluster_status_check.yaml  rollout_kubernetes_pods.yaml  squash_last_n_commits_together.yaml
site/: README.md  netlify.toml  next.config.mjs  package.json  pnpm-lock.yaml
site/content/docs/: architecture.mdx  arguments.mdx  changelog.mdx  commands.mdx  examples.mdx  i18n.mdx  index.mdx  installation.mdx  meta.json  quickstart.mdx  storage.mdx  sync.mdx  workflows.mdx
site/src/app/: global.css  layout.tsx
site/src/app/(home)/: page.tsx
site/src/app/api/search/: route.ts
site/src/app/docs/[[...slug]]/: page.tsx
site/src/components/: changelog.tsx  copy-prompt.tsx  mdx.tsx
site/src/lib/: layout.shared.tsx  shared.ts  source.ts
src/: autocomplete.rs  config.rs  lib.rs  main.rs
src/actor/: guardian.rs  manager.rs  message.rs  mod.rs  processor.rs
src/adapter/: command.rs  engine.rs  event.rs  executor.rs  filesystem.rs  git.rs  journal.rs  mod.rs  output.rs  prompt.rs  resolver.rs  storage.rs
src/adapter/command/: aggregate.rs  complete.rs  discover.rs  language.rs  list.rs  mod.rs  purge.rs  resolve.rs  select.rs  start.rs  storage.rs  sync.rs  sync_record.rs
src/adapters/: mod.rs
src/adapters/filesystem/: local_fs.rs  mod.rs
src/adapters/git/: git2_client.rs  mod.rs
src/adapters/network/: mod.rs  reqwest_client.rs
src/adapters/storage/: file_store.rs  mod.rs  rocksdb_store.rs
src/adapters/ui/: terminal.rs
src/cli/: args.rs  commands.rs  menu.rs  mod.rs
src/config/: git.rs  mod.rs  settings.rs
src/domain/: command.rs  constant.rs  engine.rs  error.rs  event.rs  mod.rs  state.rs  workflow.rs
src/i18n/: display.rs  loader.rs  macros.rs  mod.rs
src/port/: command.rs  engine.rs  event.rs  executor.rs  filesystem.rs  git.rs  journal.rs  mod.rs  output.rs  prompt.rs  storage.rs
src/ports/: filesystem.rs  git.rs  mod.rs  network.rs  storage.rs  ui.rs
src/service/: config.rs
src/services/: config_service.rs  mod.rs  sync_service.rs  workflow_service.rs
src/shared/: cli.rs  command.rs  commands.rs  config.rs  container.rs  engine.rs  error.rs  event.rs  event_bus.rs  events.rs  events_new.rs  mod.rs  types.rs  workflow.rs
src/text/: mod.rs  spinners.rs
src/ui/: display.rs  mod.rs  progress.rs  prompts.rs
src/utils/: autocomplete.rs  clipboard.rs  mod.rs
src/workflow/: executor.rs  mod.rs  parser.rs  resolver.rs  types.rs
