[package]
name = "workflow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
indicatif = "0.18.0"
inquire = "0.7.5"
fuzzy-matcher = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tera = "1.20"
tokio = { version = "1.0", features = ["full"] }
