[package]
name = "workflow"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "workflow"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clipboard = "0.5"
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3"
git2 = "0.20.2"
indicatif = "0.18.0"
inquire = "0.9.1"
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
tera = "1.20"
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
ractor = { version = "0.15.8", features = ["cluster", "monitors", "serde", "async-trait"] }
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }
whoami = "1.6.1"

[dev-dependencies]
tempfile = "3.8"
