[package]
name = "wf-cli"
version = "0.4.1"
edition = "2024"
description = "Terminal-native parameterized workflow runner — define commands in YAML, resolve arguments interactively, and copy to clipboard"
license = "MIT"
repository = "https://github.com/sagoez/workflow"
homepage = "https://github.com/sagoez/workflow"
keywords = ["cli", "workflow", "yaml", "terminal", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "workflow"
path = "src/lib.rs"

[[bin]]
name = "wf"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clipboard = "0.5"
crossterm = "0.29.0"
directories = "6.0.0"
fuzzy-matcher = "0.3"
once_cell = "1.20"
git2 = "0.20.2"
indicatif = "0.18.0"
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9"
tabled = "0.20.0"
tera = "1.20"
thiserror = "2.0.16"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
ractor = { version = "0.15.8", features = ["cluster", "monitors", "serde", "async-trait"] }
tracing = "0.1"
uuid = { version = "1.18.1", features = ["v4"] }
whoami = "2.0.0"
cliclack = "0.5.2"
ctrlc = "3.5.2"

[dev-dependencies]
tempfile = "3.8"
